[package]
name = "shellcaster"
version = "1.2.1"
authors = ["Jeff Hughes <jeff.hughes@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "A terminal-based podcast manager to subscribe to and play podcasts."
keywords = ["podcast", "terminal", "TUI", "curses"]
categories = ["multimedia::audio", "command-line-interface"]

homepage = "https://github.com/jeff-hughes/shellcaster"
repository = "https://github.com/jeff-hughes/shellcaster"
documentation = "https://github.com/jeff-hughes/shellcaster"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.19.0"
rss = "1.10.0"
rusqlite = "0.21.0"
clap = "2.33.1"
toml = "0.5.8"
anyhow = "1.0.43"
serde = { version = "1.0.127", features = ["derive"] }
chrono = "0.4.11"
lazy_static = "1.4.0"
regex = "1.5.4"
sanitize-filename = "0.2.1"
shellexpand = "2.1.0"
dirs = { package = "dirs-next", version = "2.0.0" }
opml = "0.3.0"
ahash = "0.7.4"
nohash-hasher = "0.2.0"
unicode-segmentation = "1.8.0"
textwrap = "0.13.4"
escaper = "0.1.0"
semver = "0.10.0"

[dependencies.ureq]
version = "1.5.5"
default-features = false


[features]
default = ["native-tls"]

# bundle sqlite library with app; recommended for Windows. This is
# turned on by default, but if you are building this for a package
# manager, consider building with `--no-default-features` specified, and
# adding libsqlite3-dev or sqlite3 as a dependency on the package
sqlite_bundled = ["rusqlite/bundled"]

# by default, shellcaster uses `native-tls` crate to enable TLS support;
# if this is causing issues for some websites, you can try building it
# to use `rustls` crate instead; build with `--no-default-features` and
# then specify `--features "rustls"`
native-tls = ["ureq/native-tls"]
rustls = ["ureq/tls"]

[profile.release]
debug = 1